--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Chau+Philomene+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+:root{
+  --logo-font:'Chau Philomene One', sans-serif;
+  --primary-color: #4B55BE;
+  --header-font: 'Inter', sans-serif;
+}
+
 body {
   margin: 0;
   padding: 0;
