--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,13 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background: rgb(75,85,190);
-  background: linear-gradient(135deg, rgba(75,85,190,1) 20%, rgba(221,114,145,1) 29%, rgba(239,211,164,1) 66%) no-repeat;
+  background: rgb(75, 85, 190);
+  background: linear-gradient(
+      135deg,
+      rgba(221, 114, 145, 1) 1%,
+      rgba(75, 85, 190, 1) 60%
+        /* rgba(239, 211, 164, 1) 66%,
+      rgba(146, 204, 194, 1) 70%  */
+    )
+    no-repeat;
 }
