updated the input builder and I added a textarea

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@
   --primary-color: #4b55be;
   --header-font: "Inter", sans-serif;
   --light-primary-color: #b4b9e6;
+  --secondary-color:rgba(221, 114, 145, 1);
 }
 
 body {
