--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,7 @@
   --header-font: "Inter", sans-serif;
   --light-primary-color: #b4b9e6;
   --secondary-color:rgba(221, 114, 145, 1);
+  --third-color:#efd3a4;
 }
 
 body {
