--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,3 +18,19 @@ body {
   box-sizing: border-box;
   background: rgb(75, 85, 190);
 }
+
+.swiper-container {
+ padding:0 2rem!important;
+}
+
+/* @media screen and (min-width: 320px) {
+  .swiper-container {
+    width: 320px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .swiper-container {
+    width: 768px;
+  }
+} */
