--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@
   --primary-color: #4b55be;
   --header-font: "Inter", sans-serif;
   --light-primary-color: #b4b9e6;
+  --primary-100:#6571f1;
   --secondary-color: rgba(221, 114, 145, 1);
   --third-color: #efd3a4;
 }
@@ -19,20 +20,8 @@ body {
   background: rgb(75, 85, 190);
 }
 
-.swiper-container {
- padding:0 2rem!important;
- height:50vh;
- /* overflow: visible !important; */
+a {
+  text-decoration: none;
+  color: var(--secondary-color);
+  font-family: var(--header-font);
 }
-
-/* @media screen and (min-width: 320px) {
-  .swiper-container {
-    width: 320px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .swiper-container {
-    width: 768px;
-  }
-} */
